# rag-evaluation-suite

./: .gitignore  Makefile  README.md  pyproject.toml
src/rag_eval/: __init__.py  metrics.py  models.py  runner.py
tests/: test_metrics.py  test_models.py  test_runner.py
