[project]
name = "rag-evaluation-suite"
version = "0.1.0"
description = "Evaluation suite for RAG systems. Measures faithfulness, answer relevancy, and context precision."
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.4.0",
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
